Add Data Layer and User model

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ dlldata.c
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
 
+#Enviremnets
+.env
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
