--- a/RealEstateApi/appsettings.json
+++ b/RealEstateApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
@@ -12,6 +12,9 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
 
     "Scopes": "access_as_user",
     "CallbackPath": "/signin-oidc"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-955U7HH\\SQLEXPRESS;Database=Real Estate API;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
