--- a/RealEstate.Data/RealEstate.Data.csproj
+++ b/RealEstate.Data/RealEstate.Data.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RealEstate.GlobalConstants\RealEstate.GlobalConstants.csproj" />
+  </ItemGroup>
+
 </Project>
