--- a/RealEstateApi/appsettings.json
+++ b/RealEstateApi/appsettings.json
@@ -4,14 +4,10 @@ The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
 */
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-
-    "Scopes": "access_as_user",
-    "CallbackPath": "/signin-oidc"
+  "Jwt": {
+    "Key": "577f6523-28c8-4b29-808c-c027dad373cf",
+    "ValidIssuer": "https://localhost:7039",
+    "ValidAudience": "https://localhost:7039"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-955U7HH\\SQLEXPRESS;Database=Real Estate API;Trusted_Connection=True;TrustServerCertificate=true;"
@@ -19,7 +15,10 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore.Authentication": "Debug",
+      "Microsoft.AspNetCore.Authorization": "Debug"
     }
   },
   "AllowedHosts": "*"
