Add AcountService with GenerateJwtTokenAsync method.

--- a/RealEstate.Core/RealEstate.Core.csproj
+++ b/RealEstate.Core/RealEstate.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RealEstate.Data\RealEstate.Data.csproj" />
+    <ProjectReference Include="..\RealEstate.GlobalConstants\RealEstate.GlobalConstants.csproj" />
+  </ItemGroup>
+
 </Project>
