--- a/RealEstate.Core/RealEstate.Core.csproj
+++ b/RealEstate.Core/RealEstate.Core.csproj
@@ -11,4 +11,12 @@
     <ProjectReference Include="..\RealEstate.GlobalConstants\RealEstate.GlobalConstants.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.3.0" />
+  </ItemGroup>
+
 </Project>
