Add GetSaleCategoriesQuery and handler. Also add saleCategories route in HomeController

--- a/RealEstate.Core/RealEstate.Core.csproj
+++ b/RealEstate.Core/RealEstate.Core.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="MediatR" Version="12.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\PropertyCategories\" />
+  </ItemGroup>
+
 </Project>
