Add CreatePropertyCommand and handler. Also add create route in PropertyController

--- a/RealEstateApi/RealEstate.csproj
+++ b/RealEstateApi/RealEstate.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\RealEstate.Data\RealEstate.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
