--- a/RealEstateApi/RealEstate.csproj
+++ b/RealEstateApi/RealEstate.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Mvc" Version="6.1.0" />
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="6.0.0" />
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.9" />
